tests/error/errors_on_usage/else_not_defined_functional.py
from guppylang.decorator import guppy


@compile_guppy
def foo(x: bool) -> int:
    _@functional
    if x:
        y = 1
    else:
        z = 2
    return z
